rmi working, added all entities, mapping todo