@@ -34,11 +34,20 @@
             <version>5.2.2.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>com.example.placefinderAPI</groupId>
-            <artifactId>placefinderAPI</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/placefinderAPI.jar</systemPath>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.4.7.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.7.Final</version>
         </dependency>
     </dependencies>
 
@@ -47,6 +56,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>
+                        -Djava.security.manager
+                        -Djava.security.policy=/home/riccardo/Scrivania/PlaceFinder/WebServer/myprogram.policy
+                        <!---Djava.rmi.server.codebase=http://localhost:1099/RemoteServer-->
+                    </jvmArguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
